clusters/home/apps/prometheus/prometheus/configs/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: prometheus
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://prometheus.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Prometheus
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/app: prometheus # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Prometheus
    #gethomepage.dev/widget.type: "prometheus"
    #gethomepage.dev/widget.url: "https://prometheus.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`prometheus.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: prometheus-server
      port: 80
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: prometheus-certificate-secret
